<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFBC25"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/scanner"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:button="@android:color/transparent"
                android:text="@string/scanner"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:background="@drawable/textlines"/>


            <RadioButton
                android:id="@+id/receipts"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:button="@android:color/transparent"
                android:text="@string/receipts"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/expenses"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:button="@android:color/transparent"
                android:text="@string/expenses"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_weight="1"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/scannerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#FFE191">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="center"
                android:src="@drawable/ic_camera_alt_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scannerInstructions"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/receiptLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFE191"
            android:visibility="gone">
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/expenseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE191"
            android:visibility="gone">

            <Spinner
                android:id="@+id/expenseDropdown"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:background="#FFAC47"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:id="@+id/expenseData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultView"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFE191">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFE191"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="3dp"
                    android:elevation="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="#FFE191">
                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:fontFamily="@string/font_family_black"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:padding="10sp"/>
                        <TextView
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/dateDescription"
                            android:fontFamily="@string/font_family_black"
                            android:textSize="15sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/yearLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dateYear"
                                    android:textSize="19sp" />

                                <EditText
                                    android:id="@+id/receiptYear"
                                    android:layout_width="100sp"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:textColor="#000" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/monthLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dateMonth"
                                    android:textSize="19sp" />

                                <EditText
                                    android:id="@+id/receiptMonth"
                                    android:layout_width="70sp"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:textColor="#000" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/dayLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dateDay"
                                    android:textSize="19sp" />

                                <EditText
                                    android:id="@+id/receiptDay"
                                    android:layout_width="80sp"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:textColor="#000" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:id="@+id/amountLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/amountLabel"
                                    android:textSize="19sp" />
                                <EditText
                                    android:id="@+id/receiptAmount"
                                    android:layout_width="70sp"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:textColor="#000"/>
                            </LinearLayout>
                        </LinearLayout>
                        <Button
                            android:id="@+id/saveOCR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/save"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#fff"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="3dp"
                    android:elevation="3dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:background="#FFE191">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/imagePreviewView"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imagePreview"
                            android:contentDescription="@string/previewImage" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>